[package]
name = "gitpack-2"
version = "0.1.0"
authors = ["GrbavaCigla <alexa.ognjanovic@protonmail.com>"]
edition = "2018"

[dependencies]
git2 = "0.13"
structopt = { version = "0.3", default-features = false }
config = { version = "0.10", default-features = false, features = ["toml"] }
reqwest = { version = "0.10.8", features = ["blocking"] }