[package]
name = "gitpack-2"
version = "0.1.0"
authors = ["GrbavaCigla <alexa.ognjanovic@protonmail.com>"]
edition = "2018"

[dependencies]
git2 = "0.13.12"
structopt = { version = "0.3.21", default-features = false }
config = { version = "0.10.1", default-features = false, features = ["toml"] }
reqwest = { version = "0.10.9", features = ["blocking"] }
rusqlite = { version = "0.24.1" }
colored = { version = "2.0.0" }
pbr = { version = "1.0.3" }